refactored for new types